web/k8s/web-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: header
  namespace: prod
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "POST"
      - "PUT"
    accessControlAllowHeaders:
      - "*"
    addVaryHeader: true
    accessControlAllowOriginList: 
      - "*"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: prod
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: prod-header@kubernetescrd
spec:
  rules:
  - host: api.k8s.demo
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-back-end-service
            port: 
              number: 40814
  - host: web.k8s.demo
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-demo-back-front-service
            port: 
              number: 80
